--- a/trello-frontend/src/index.css
+++ b/trello-frontend/src/index.css
@@ -10,4 +10,8 @@
  body{
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: rgba(12, 15, 35, 0.3);
+  backdrop-filter: blur(600px);
+  min-height: 100vh;
+  background-color: #434343;
  }
